@@ -1,5 +1,13 @@
 2005-05-13 Braden McDaniel  <braden@endoframe.com>
 
+	Doc-comment fixes.
+
+	* src/libopenvrml/openvrml/field_value.cpp
+	* src/libopenvrml/openvrml/viewer.h
+	* src/libopenvrml-gl/openvrml/gl/viewer.h
+
+2005-05-13 Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/openvrml/bounding_volume.cpp:  Doc-comment
 	fixes.
 
